--- a/1.Static App/1.3. Page from class/css/styles.css
+++ b/1.Static App/1.3. Page from class/css/styles.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
+:root{
+    --primary-color: #047aed;
+}
 
 * {
     box-sizing:border-box;
@@ -36,16 +39,103 @@ p {
 img {
     width: 100%;
 }
-
+/* Navbar styling */
 .navbar {
     background-color: #047aed;
     color: #fff;
-    height: 70px;
+    height: 100px;
+}
+.navbar .flex{
+    justify-content: space-between;
 }
 
-.container {
-    max-width: 1100px;
-    margin: 0 auto;
-    overflow: auto;
-    padding: 0 40px;
+.navbar ul{
+    display: flex;
 }
+
+.navbar a{
+    color: #fff;
+    padding: 10px;
+    margin: 0 5px;
+}
+
+.navbar a:hover{
+    border-bottom: 2px #fff solid;
+}
+/* Show case  */
+
+.showcase{
+    height: 500px;
+    background-color: var(--primary-color);
+    color: #fff;
+    position: relative;
+}
+
+.showcase h1{
+    font-size: 40px;
+}
+
+.showcase p{
+    margin: 20px 0;
+}
+
+.showcase .grid{
+    grid-template-columns: 55% 45%;
+    gap: 30px;
+    overflow: visible;
+}
+
+.showcase-form{
+    position: relative;
+    top: 60px;
+    height: 350px;
+    width: 400px;
+    padding: 10px;
+    z-index: 100;
+    /* justify-self: flex-end; */
+}
+
+.showcase-form .form-controle {
+    margin: 30px 0;
+}
+
+
+.showcase-form input[type='text'],
+.showcase-form input[type='email']{
+  border: 0px;
+  border-bottom: 1px solid #b4becb;
+  width: 100%;
+  padding: 3px;
+  font-size: 16px;
+}
+
+.showcase-form input:focus{
+    outline: none;
+}
+
+.showcase::before,
+.showcase::after {
+    content: '';
+    position: absolute;
+    height: 100px;
+    bottom: -70px;
+    right: 0;
+    left: 0;
+    background: #fff; 
+    transform: skewY(-3deg);
+    
+    -webkit-transform: skewY(-3deg);
+    -moz-transform: skewY(-3deg);
+    -ms-transform: skewY(-3deg);
+}
+
+
+/* Stats  */
+
+.stats{
+    padding-top: 100px;
+}
+
+
+
+
