--- a/1.Static App/1.3. Page from class/css/utilities.css
+++ b/1.Static App/1.3. Page from class/css/utilities.css
@@ -36,6 +36,55 @@
     transform: scale(0.9);
 }
 
+
+
+/* Backgrounds & color buttons */
+.bg-primary,  
+.btn-primary{
+    background-color: var(--primary-color);
+    color: #fff;
+}
+
+.bg-secondary,  
+.btn-secondary{
+    background-color: var(--secondary-color);
+    color: #fff;
+}
+
+.bg-dark,  
+.btn-dark{
+    background-color: var(--dark-color);
+    color: #fff;
+}
+
+.bg-light,  
+.btn-light{
+    background-color: var(--light-color);
+    color: #333;
+}
+
+/* Text sizes */
+
+.lead{
+    font-size: 20px;
+}
+
+.sm{
+    font-size: 1rem;
+}
+
+.md{
+    font-size: 2rem;
+}
+.lg{
+    font-size: 3rem;
+}
+.xl{
+    font-size: 4rem;
+}
+
+
+
 .text-center{
     text-align:center;
 }
@@ -61,7 +110,11 @@
 
 .grid-3{
     grid-template-columns: repeat(3, 1fr);
+    height: 50%;
 }
+
+
+
 
 /* Margin */
 .my-1{
